added header and intro

--- a/206-flexbox/css/main.css
+++ b/206-flexbox/css/main.css
@@ -120,7 +120,7 @@ body {
   align-items: center;
   display: flex;
   justify-content: center;
-  background: #222;
+  background: #2d3441;
   background:rgba(51, 60, 130, 0.79);
   border-radius: 10px;
   color: #fff;
