--- a/206-divs-flexbox/css/main.css
+++ b/206-divs-flexbox/css/main.css
@@ -109,6 +109,18 @@ body {
     height: 100%;
 }
 
+.hi {
+    display: flex;
+    font-family: 'Abel', sans-serif;
+    font-size: 2em;
+}
+
+.intro {
+    display: flex;
+    font-size: 1.5em;
+    border-bottom: 1px #fff solid;
+}
+
 .wrapper {
     display: flex;
     flex-flow: row wrap;
@@ -214,7 +226,6 @@ body {
    ========================================================================== */
    @media screen and (min-width: 1200px) {
     .wrapper {
-        border-top: 1px solid #fff;
         border-bottom: 1px solid #fff;
     }
 
