--- a/206-divs-flexbox/css/main.css
+++ b/206-divs-flexbox/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #2d3441;
+  background-color: #010d26;
   height: 100%; 
   width: 100%;
 }
@@ -109,22 +109,24 @@ body {
     height: 100%;
 }
 
-.hi {
+header {
     display: flex;
     font-family: 'Abel', sans-serif;
     font-size: 2em;
+    margin: 0;
 }
 
 .intro {
     display: flex;
     font-size: 1.5em;
-    border-bottom: 1px #fff solid;
+    border-bottom: 1px #0a46bf solid;
 }
 
 .wrapper {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    border-bottom: 1px #0a46bf solid;
 }
 
 .about, .passion, .fun-fact {
@@ -133,7 +135,7 @@ body {
     display: flex;
     font-size: 1.5em;
     height: auto;
-    justify-content: center;
+    justify-content: flex-start;
     line-height: 1.5em;
     padding: 0 .25em;
 }
@@ -143,6 +145,13 @@ body {
     font-size: 1.6em;
     justify-content: center;
     text-transform: uppercase;
+}
+
+footer {
+    display: auto;
+    justify-content: flex-start;
+    height: 50px;
+    width: 100%;
 }
 
 /* ==========================================================================
@@ -225,16 +234,13 @@ body {
    Modify as content requires.
    ========================================================================== */
    @media screen and (min-width: 1200px) {
-    .wrapper {
-        border-bottom: 1px solid #fff;
-    }
 
     .about, .passion, .fun-fact {
         width: 30%;
 }
 
     .about, .passion {
-        border-right: 1px solid #fff;
+        border-right: 1px solid #0a46bf;
         padding-right: 30px;
     }
 
