--- a/206-rogue_pickings/css/main.css
+++ b/206-rogue_pickings/css/main.css
@@ -1,47 +1,53 @@
+html {
+	font-size: 16px;
+}
+
 @font-face{
 	font-family: 'Wisdom Script';
 	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
 
-html {
-	font-size: 16px;
-}
-
 body {
+	align-items: center;
+	display: flex;
+	justify-content: center;
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	font-size: 1em;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 
 .container {
-	max-width: 100%;
-	height: 100%;
-	margin: 0 15px;
+	max-width: 1200px;
+	width: 90%;
+	display: flex;
+	align-items: center;
 	justify-content: center;
+	flex-flow: row wrap;
 }
 
-.header h1 {
-	display: flex;
-	justify-content: center;
+header {
 	align-items: center;
-	height: auto;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	text-align: center;
+	width: 100%;
+}
+
+header h1 {
 	border-bottom: 3px solid #77a466;
-	padding: 10px 0;
-	letter-spacing: 1px;
+	margin: 0;
+	padding: 38px 20px 20px 20px; 
+	width: 100%;
+
 }
 
 header h1 span {
 	color: #77a466;
 }
 
-.navigation {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: auto;
-	flex-flow: column wrap;
+header nav {
+	padding: 20px 0;
+	width: 100%;
 }
 
 header nav ul {
@@ -50,12 +56,11 @@ header nav ul {
 }
 
 header nav ul li {
-	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 1em;
-	padding: 10px;
+	font-size: .875em;
 	list-style: none;
-	text-align: center;
+	padding: 10px 0;
+	text-transform: uppercase;
 }
 
 header nav ul li a {
@@ -72,13 +77,13 @@ h4 {
 	font-weight: 700;
 }
 h1 {
-	font-size: 1.87em;
+	font-size: 1.8em;
 }
 h2 {
-    font-size: 24px;
+    font-size: 1.5em;
 }
 h3 {
-	font-size: 1.5em;
+	font-size: 1.125em;
 }
 h4 {
 	font-size: 1em;
@@ -86,186 +91,123 @@ h4 {
 p {
 	font-size: 1em;
 	line-height: 21px;
-	padding: 0 30px;
-	margin: 5px;
 }
 
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
-	width: 100%;
+	align-items: center;
+	display: flex;
+	flex-flow: row wrap;
 	justify-content: center;
 }
 
-.main-image {
-	height: auto;
-	float: left;
-}
-
 .main-image img {
-	width: 100%;
-	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
-}
-
-.main-title {
-	height: auto;
+	border-top: 3px solid #77a466;
+	width: 100%;
 }
 
 .main-title h3 {
-	justify-content: flex-start;
-	padding: 5px 0;
 	color: #77a466;
+	padding: 5px 0;
+	text-align: left;
 }
 .main-title p {
-	padding: 5px 0;
+	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	line-height: 1.562;
 }
 
 .section-one,
 .section-two,
 .section-three {
-	display: flex;
-	flex-flow: row wrap;
-	width: 100%;
-	height: auto;
 	border-top: 1px solid #eee;
-}
-
-.section-one h4,
-.section-two h4,
-.section-three h4 {
-	padding: 5px 10px;
-	margin: 10px 0 5px 0;
+	width: 100%;
 }
 
 .menu {
 	list-style: none;
-	padding: 5px 0 5px 10px;
-	margin: 0;
+	padding: 0;
 }
+
 .menu li {
 	padding: 10px 0;
 	color:#77a466;
-	display: flex;
-	justify-content: flex-start;
-	align-content: center;
 }
 
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
-	display: flex;
-	justify-content: flex-start;
-	align-content: center;
-	padding: 5px 10px;
+	line-height: 1.312;
 }
 
 .address {
-	display: flex;
 	font-size: 1em;
-	line-height: 24px;
-	justify-content: flex-start;
-	align-content: center;
-	padding: 5px 10px;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
-	height: 50px;
-	width: 100%;
+	align-items: center;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
-	clear: both;
-	text-align: center;
+	display: flex;
+	flex-flow: row wrap;
 	justify-content: center;
+	text-align: center;
+	width: 100%;
 }
 footer span {
+	color: #77a466;
+	font-size: .875em;
 	font-family: 'Wisdom Script', cursive;
 	text-transform: lowercase;
-	color: #77a466;
-	font-size: .87em;
 }
 
-@media screen and (min-width: 768px) {
-	.section-one,
-	.section-two,
-	.section-three {
-		width: 33%;
-		height: auto;
-		float: left;
-		border-top: 1px solid #eee;
-	}
+@media only screen and (min-width: 768px) {
+	/*****TABLET STYLES*****/
 
-	.section-one h4 {
-		padding: 10px 0;
+	.bottom-section {
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+		justify-content: center;
+	}
+	
+
+	.section-one, .section-two, .section-three {
+		border-top: none;
+		flex-basis: 30%
 	}
 	
 	.section-two {
 		border-left: 1px solid #eee;
 		border-right: 1px solid #eee;
+		padding: 0 20px;
 	}
-	
-	.menu {
+
+	.section-three {
+		padding: 0 20px;
+	}
+@media only screen and (min-width: 1200px) {
+	/****Desktop Styles****/
+
+	header {
+		justify-content: space-between;
+	}
+
+	header h1 {
+		border-bottom: none;
+		padding: none;
+		text-align: left;
+		width: 30%;
+	}
+
+	header nav {
+		width: 40%;
+	}
+
+	header nav ul {
 		display: flex;
-		flex-flow: column wrap;
-		list-style: none;
-		padding: 0;
+		justify-content: space-between;
 	}
-	.menu li {
-		color:#77a466;
-	}
-	
-	.reviews {
-		display: flex;
-		color: #333;
-		font-size: 1em;
-		line-height: 21px;
-	}
-	
-	.address {
-		display: flex;
-		font-size: 1em;
-		line-height: 24px;
-	}
-}
-
-@media screen and (min-width: 1200px) {
-	/*The widths are in a percentage!*/
-header {
-	height: 100%;
-	margin: 0 auto;
-	justify-content: center;
-}
-
-header h1 {
-	float: left;
-	padding: 38px 0;
-}
-
-header nav {
-	float: right;
-	padding: 46px 0;
-}
-
-header nav ul li {
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 1em;
-	padding: 0 10px;
-	display: inline;
-}
-
-.top-section,
-.bottom-section {
-	margin: 0 auto;
-	clear: both;
-}
-
-.main-title {
-	height: auto;
-	float: left;
 }
